Get rid of knockDetectionWindowEnd that was used by HIP9011 only
Use knockSamplingDuration instead

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4093,7 +4093,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = knockThresholdCurve, Center
 
 ;	Engine->hip9011 Settings
-	dialog = hipHardware
+	dialog = hipHardware, "HIP9011 hardware settings"
 		field = "SPI device",							hip9011SpiDevice, {isHip9011Enabled == 1}
 		field = "ChipSelect pin",						hip9011CsPin, {isHip9011Enabled == 1}
 		field = "ChipSelect mode",						hip9011CsPinMode, {isHip9011Enabled == 1}
@@ -4101,13 +4101,14 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "IntHold pin  mode",					hip9011IntHoldPinMode, {isHip9011Enabled == 1}
 		field = "hip Output/stm input",					hipOutputChannel, {isHip9011Enabled == 1}
 
-	dialog = hipSettings
+	dialog = hipSettings, "HIP9011 software settings"
 		field = "prescaler",							hip9011Prescaler, {isHip9011Enabled == 1}
-		field = "knockDetectionWindowStart",			knockDetectionWindowStart, {isHip9011Enabled == 1}
-		field = "knockDetectionWindowEnd",				knockDetectionWindowEnd, {isHip9011Enabled == 1}
-		field = "Cylinder bore",					cylinderBore, {isHip9011Enabled == 1}
 
-	dialog = hipCurve, "Knock threshold"
+	dialog = hipCurve, "Knock sensing"
+		field = "Cylinder bore",						cylinderBore
+		field = "Band Freq override",					knockBandCustom
+		field = "knockDetectionWindowStart",			knockDetectionWindowStart
+		field = "knockSamplingDuration",				knockSamplingDuration
 		panel = knockThresholdCurve
 
 	dialog = hipFunction, "HIP9011 Settings (knock decoder)"
