--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4707,7 +4707,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Minimum ETB position",					etbMinimumPosition
 		field = "Maximum ETB position",					etbMaximumPosition
 		field = ""
-		field = "Jam detection error max",				jamDetectThreshold
+		field = "Jam detection error max",				etbJamDetectThreshold
 		field = "Jam detection timeout period",			etbJamTimeout
 		field = "Disables jam detection for testing until the next power cycle"
 		commandButton = "Temporarily disable jam detection", cmd_etb_disable_jam_detect
