BOARD_VE_FROM_FILE

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -182,6 +182,8 @@ enable2ndByteCanID = false
 		filter = minTps, "Minimum TPS", TPSValue,		<		, 1,		, true
 		filter = std_Custom
 
+@@BOARD_VE_FROM_FILE@@
+
 ;
 ; in order to add new TunerStudio data point you need to change one of *.txt files mentioned in LiveData.yaml
 ;
