--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1164,7 +1164,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= torqueLoadBins, veTableYAxis
 		zBins		= torqueTable
 
-	table = veTableTbl,  veTableMap,  "VE Table",	1
+	table = veTableTbl,  veTableMap,  @@VE_TABLE_NAME@@,	1
 		xyLabels = "RPM", "load"
 		xBins		= veRpmBins,  RPMValue
 		yBins		= veLoadBins, veTableYAxis
@@ -4746,7 +4746,7 @@ dialog = tcuControls, "Transmission Settings"
 		topicHelp = "veTableDialogHelp"
 		panel = veTableTbl, South
 
-	dialog = veTableDialog3D, "VE Table"
+	dialog = veTableDialog3D, @@VE_TABLE_NAME@@
 		topicHelp = "veTableDialogHelp"
 		panel = veTableMap, South
 
