--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2319,8 +2319,8 @@ cmd_test_vvt1_valve				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CAT
 cmd_test_vvt2_valve				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_BENCH_VVT2_VALVE_16_hex@@"
 cmd_test_vvt3_valve				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_BENCH_VVT3_VALVE_16_hex@@"
 
-cmd_calibrate_pedal_up		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x06"
-cmd_calibrate_pedal_down	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x07"
+cmd_calibrate_pedal_up		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_GRAB_PEDAL_UP_16_hex@@"
+cmd_calibrate_pedal_down	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_TS_GRAB_PEDAL_WOT_16_hex@@"
 cmd_tle8888_init			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x08"
 cmd_mc33810_init			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x14"
 cmd_write_config			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_WRITE_FLASH_16_hex@@"
@@ -2328,9 +2328,9 @@ cmd_write_config			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@
 cmd_etb_autotune				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x0C"
 cmd_enable_self_stim			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x0D"
 cmd_etb_auto_calibrate		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x0E"
-cmd_disable_self_stim		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x0F"
-cmd_etb_autotune_stop		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x10"
-cmd_etb_auto_calibrate_2	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x11"
+cmd_disable_self_stim		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_ETB_AUTOCAL_0_16_hex@@"
+cmd_etb_autotune_stop		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_ETB_STOP_AUTOTUNE_16_hex@@"
+cmd_etb_auto_calibrate_2	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_ETB_AUTOCAL_1_16_hex@@"
 cmd_wideband_firmare_update  = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x12"
 cmd_enable_ext_stim			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x13"
 cmd_burn_without_flash		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x15"
