ETB setup usability: auto-burn #6965 should first OPEN, then CLOSE

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4782,6 +4782,7 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = etbAutotune, "PID Autotune"
 		field = "First step: calibrate TPS and hit 'Burn'"
+		field = "should first OPEN, then CLOSE"
 		commandButton = "Auto Calibrate ETB 1", cmd_etb_auto_calibrate,   { (etbFunctions1 == @@dc_function_e_DC_Throttle1@@ || etbFunctions2 == @@dc_function_e_DC_Throttle1@@) && tps1_1AdcChannel != @@ADC_CHANNEL_NONE@@ && calibrationMode == @@TsCalMode_None@@}
 		commandButton = "Auto Calibrate ETB 2", cmd_etb_auto_calibrate_2, { (etbFunctions1 == @@dc_function_e_DC_Throttle2@@ || etbFunctions2 == @@dc_function_e_DC_Throttle2@@) && tps2_1AdcChannel != @@ADC_CHANNEL_NONE@@ && calibrationMode == @@TsCalMode_None@@}@@if_ts_show_tps2
 		field = "Second step"
