@@if_ts_show_idle_hardware

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4817,7 +4817,7 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = testMisc, "Misc"
 		commandButton = "A/C Relay", cmd_test_ac_relay@@if_ts_show_air_conditioning
-		commandButton = "Idle Air Valve", cmd_test_idle_valve
+		commandButton = "Idle Air Valve", cmd_test_idle_valve@@if_ts_show_idle_hardware
 		commandButton = "Idle Second Air Valve", cmd_test_second_idle_valve@@if_ts_show_idle_hardware
 		commandButton = "Stop Engine", cmd_stop_engine
 		commandButton = "Write Config", cmd_write_config
