only:ENGINE_TYPES_DIALOG_NAME

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2186,7 +2186,7 @@ menuDialog = main
 		subMenu = ecuStimulator,			"ECU stimulator"
 		subMenu = ioTest,					"Bench test"
 		subMenu = injTest,					"Injector test"
-		subMenu = engineTypeDialog,			"Popular vehicles"@@if_ts_show_popular_vehicles
+		subMenu = engineTypeDialog,			@@ENGINE_TYPES_DIALOG_NAME@@@@if_ts_show_popular_vehicles
 		subMenu = std_separator
 
 		subMenu = spiBuses,						"SPI Buses"@@if_ts_show_spi
@@ -4889,7 +4889,7 @@ dialog = tcuControls, "Transmission Settings"
 
 		commandButton = "ETB test bench", cmd_set_engine_type_etb_test@@if_show_test_presets
 		commandButton = "TLE8888 test bench", cmd_set_engine_type_8888_test@@if_show_test_presets
-		commandButton = "Reset to factory tune", cmd_set_engine_type_default
+		commandButton = "Reset to factory tune", cmd_set_engine_type_default@@if_show_default_engine_type
 
 ;			Board->ECU stimulator
 	dialog = ecuStimulator, "ECU stimulator"
