only:show_fuel_bench_preset true

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4862,7 +4862,8 @@ dialog = tcuControls, "Transmission Settings"
 		commandButton = "Frankenso Miata NA6 Stage 1", cmd_set_engine_type_Frankenso_Miata_NA6_MAP@@if_show_Frankenso_presets
 
 @@BOARD_POPULAR_VEHICLES_FILE@@
-		commandButton = "Honda OBD1", cmd_set_engine_type_HONDA_OBD1
+		commandButton = "Honda OBD1", cmd_set_engine_type_HONDA_OBD1@@if_show_honda_obd1_preset
+ 		commandButton = "Fuel Bench",               cmd_set_engine_type_FUEL_BENCH@@if_show_fuel_bench_preset
 
 ;		commandButton = "Mitsubishi 3A92",             cmd_set_engine_type_MITSUBISHI_3A92
 ;		commandButton = "Mitsubishi 4G93",             cmd_set_engine_type_MITSUBISHI_4G93
@@ -4891,7 +4892,6 @@ dialog = tcuControls, "Transmission Settings"
 		commandButton = "Proteus Honda K",			cmd_set_engine_type_PROTEUS_HONDA_K@@if_show_Proteus_presets
 ;		commandButton = "Proteus Honda OBD2A",		cmd_set_engine_type_HONDA_OBD2A@@if_show_Proteus_presets
 		commandButton = "Proteus Harley",			cmd_set_engine_type_HARLEY@@if_show_Proteus_presets
-    		commandButton = "Fuel Bench",               cmd_set_engine_type_FUEL_BENCH
 
 		commandButton = "Small Block Chevy",		        cmd_set_engine_type_GM_SBC@@if_show_Proteus_presets
 		commandButton = "Small Block Chevy",		        cmd_set_engine_type_GM_SBC@@if_show_uaefi_presets
