only:smarter default tunes output folder

--- a/.github/workflows/build-simulator.yaml
+++ b/.github/workflows/build-simulator.yaml
@@ -60,7 +60,10 @@ jobs:
 
     - name: Convert .bin from Linux Simulator into .xml
       working-directory: ./simulator/
-      run: ./write_tune.sh ../firmware/tunerstudio/generated/rusefi_f407-discovery.ini
+      run: |
+        export DEFAULT_TUNE_OUTPUT_FOLDER=../simulator/generated/
+        echo "DEFAULT_TUNE_OUTPUT_FOLDER=$DEFAULT_TUNE_OUTPUT_FOLDER"
+        ./write_tune.sh ../firmware/tunerstudio/generated/rusefi_f407-discovery.ini
 
     - name: Commit fresh generated default simulator tune
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master'}}
