jam detect ignore button #6925 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2333,6 +2333,7 @@ cmd_etb_autotune_stop		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_he
 cmd_etb_auto_calibrate_2	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@@@ts_14_command_TS_ETB_AUTOCAL_1_16_hex@@"
 cmd_wideband_firmare_update  = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x12"
 cmd_enable_ext_stim			= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x13"
+cmd_etb_disable_jam_detect	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x14"
 cmd_burn_without_flash		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_X14_16_hex@@\x00\x15"
 
 cmd_set_wideband_idx_0		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_WIDEBAND_16_hex@@\x00\x00"
@@ -4708,6 +4709,8 @@ dialog = tcuControls, "Transmission Settings"
 		field = ""
 		field = "Jam detection error max",				jamDetectThreshold
 		field = "Jam detection timeout period",			etbJamTimeout
+		field = "Disables jam detection for testing until the next power cycle"
+		commandButton = "Temporarily disable jam detection", cmd_etb_disable_jam_detect
 		; we need the term about stepper idle in here, because there's a bug in TS that you can't have different visibility
 		; criteria for the same panel when used in multiple places
 		; todo: report bug to TS?
