only:set-date for branches

--- a/.github/workflows/set-date.yaml
+++ b/.github/workflows/set-date.yaml
@@ -50,4 +50,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ github.token }}
-        branch: master
+        branch: ${{ github.ref }}
