--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4159,10 +4159,10 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = speedSensorAnalog, { enableCanVss == 0 }
 		panel = speedSensorCan
 
-	dialog = gearDetection, "Gear Detection"
-		field = "Wheel revolutions per kilometer",	driveWheelRevPerKm
-		field = "Final drive ratio",		finalGearRatio
-		field = ""
+	dialog = gearDetection, @@GEAR_DETECTION_DIALOG_NAME@@
+		field = "Wheel revolutions per kilometer",	driveWheelRevPerKm@@if_ts_show_final_ratio
+		field = "Final drive ratio",		finalGearRatio@@if_ts_show_final_ratio
+		field = ""@@if_ts_show_final_ratio
 		field = "Forward gear count", totalGearsCount
 		field = ""
 		field = "1st gear", gearRatio1, { totalGearsCount >= 1 }
