Detected gear is ok, but current gear is 0 fix #6986
renaming to "TCU: Current Gear" and hiding

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1710,12 +1710,12 @@ gaugeCategory = Sensors - Raw
 	issEdgeCounterGauge  = issEdgeCounter, "Raw ISS",			"counter", 0, 5, 0, 0, 5, 5, 0, 0
 
 gaugeCategory = Transmission
-	desiredGearGauge = tcuDesiredGear, @@GAUGE_NAME_DESIRED_GEAR@@, "gear", -1, 10, -1, -1, 10, 10, 0, 0
-	currentGearGauge = tcuCurrentGear, @@GAUGE_NAME_CURRENT_GEAR@@, "gear", -1, 10, -1, -1, 10, 10, 0, 0
+	desiredGearGauge = tcuDesiredGear, @@GAUGE_NAME_DESIRED_GEAR@@, "gear", -1, 10, -1, -1, 10, 10, 0, 0@@if_show_tcu_gauges
+	currentGearGauge = tcuCurrentGear, @@GAUGE_NAME_CURRENT_GEAR@@, "gear", -1, 10, -1, -1, 10, 10, 0, 0@@if_show_tcu_gauges
 	detectedGearGauge = detectedGear, @@GAUGE_NAME_DETECTED_GEAR@@, "gear", 0, @@TCU_GEAR_COUNT@@, 0, 0, @@TCU_GEAR_COUNT@@, @@TCU_GEAR_COUNT@@, 0, 0
 	speedToRpmRatioGauge = speedToRpmRatio, @@GAUGE_NAME_GEAR_RATIO@@, "",	0,	100,	0,	0,	100,  100,	4,	4
-	ISSGauge = ISSValue, @@GAUGE_NAME_ISS@@, "RPM", 0, {rpmHardLimit + 2000}, 200, {cranking_rpm}, {rpmHardLimit - 500}, {rpmHardLimit}, 0, 0
-	tcRatioGauge = tcRatio, @@GAUGE_NAME_TC_RATIO@@, "",	0,	100,	0,	0,	100,  100,	4,	4
+	ISSGauge = ISSValue, @@GAUGE_NAME_ISS@@, "RPM", 0, {rpmHardLimit + 2000}, 200, {cranking_rpm}, {rpmHardLimit - 500}, {rpmHardLimit}, 0, 0@@if_show_tcu_gauges
+	tcRatioGauge = tcRatio, @@GAUGE_NAME_TC_RATIO@@, "",	0,	100,	0,	0,	100,  100,	4,	4@@if_show_tcu_gauges
 	shiftTimeGauge = lastShiftTime, "Last Shift Time", "S", 0, 2, 0, 0, 2, 2, 4, 4
 	idealEngineTorqueGauge = idealEngineTorque, "idealEngineTorque", "",	0,	100,	0,	0,	100,  100,	4,	4
 	pressureControlGauge = pressureControlDuty, "EPC Duty Cycle", "%", 0, 100, 0, 0, 100, 100, 0, 0
