Add I-term bounds for Alternator Control #6988 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4126,6 +4126,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "P factor",								alternatorControl_pFactor, {isAlternatorControlEnabled == 1}
 		field = "I factor",								alternatorControl_iFactor, {isAlternatorControlEnabled == 1}
 		field = "D factor",								alternatorControl_dFactor, {isAlternatorControlEnabled == 1}
+		field = "iTerm min",								alternator_iTermMin, {isAlternatorControlEnabled == 1}
+		field = "iTerm max",								alternator_iTermMax, {isAlternatorControlEnabled == 1}
 		field = "Min",									alternatorControl_minValue, {isAlternatorControlEnabled == 1}
 		field = "Max",									alternatorControl_maxValue, {isAlternatorControlEnabled == 1}
 		field = "#% duty = Pterm + Iterm + Dterm + offset%"
