only:knockSpectrumSensitivity and knockFrequency comes back! knock_plugin_clean - clean changes #6989

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -358,6 +358,7 @@ enable2ndByteCanID = false
 	requiresPowerCycle = auxAnalogInputs8
 
 	requiresPowerCycle = cylinderBore
+	requiresPowerCycle = knockFrequency
 
 	readOnly = warning_message
 	readOnly = device_uid1
@@ -3889,9 +3890,13 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = softwareKnockCfg, "Sense"
 		field = "Enable",				enableSoftwareKnock
 		field = "Cylinder Bore",			cylinderBore, {enableSoftwareKnock}
+		field = "Estimated Knock Frequency",knockFrequency, {enableSoftwareKnock}
 		field = "Detection mode",   knockDetectionUseDoubleFrequency
 		field = "Detection Window Start",knockDetectionWindowStart, {enableSoftwareKnock}
 		field = "Sampling Duration",	knockSamplingDuration, {enableSoftwareKnock}
+		field = "Enable Knock Spectrogram",	enableKnockSpectrogram, {enableSoftwareKnock}
+		field = "Enable Knock Spectrogram Filter",	enableKnockSpectrogramFilter, {enableKnockSpectrogram}
+		field = "Knock Spectrum Sensitivity", knockSpectrumSensitivity, {enableKnockSpectrogram}
 
 		field = ""
 		field = "Select the nearest sensor for each cylinder"
