only:new spectrogram protocol compatible with TS plug-in knock_plugin_clean - clean changes #6989

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1738,6 +1738,26 @@ gaugeCategory = Knock
 	knockLevelGauge = m_knockLevel,"Knock level", "dBv", -60, 10, -60, -60, 10, 10, 0, 0
 	knockRetardGauge = m_knockRetard, "Knock retard", "deg", 0, 10, 0, 0, 10, 10, 1, 1
 	knockCountGauge = m_knockCount, "Knock count", "count", 0, 10000, 0, 0, 10000, 10000, 0, 0
+	knockSpectrumChannelCylGauge = m_knockSpectrumChannelCyl, "Knock Frequency Start", "Hz", 0, 0, 0, 0, 10000, 10000, 0, 0
+	knockFrequencyStartGauge = m_knockFrequencyStart, "Knock Frequency Start", "Hz", 0, 0, 0, 0, 10000, 10000, 0, 0
+	knockFrequencyStepGauge = m_knockFrequencyStep, "Knock Frequency Step", "Hz", 0, 0, 0, 0, 10000, 10000, 0, 0
+	knockFuelTrimMultiplier = m_knockFuelTrimMultiplier, "Knock Fuel Trim", "mult", 0, 0, 0, 0, 0, 30, 1, 1
+	knockSpectrum1 = m_knockSpectrum1, "Knock Spectrum1", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum2 = m_knockSpectrum2, "knockSpectrum2", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum3 = m_knockSpectrum3, "knockSpectrum3", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum4 = m_knockSpectrum4, "knockSpectrum4", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum5 = m_knockSpectrum5, "knockSpectrum5", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum6 = m_knockSpectrum6, "knockSpectrum6", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum7 = m_knockSpectrum7, "knockSpectrum7", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum8 = m_knockSpectrum8, "knockSpectrum8", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum9 = m_knockSpectrum9, "knockSpectrum9", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum10 = m_knockSpectrum10, "knockSpectrum10", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum11 = m_knockSpectrum11, "knockSpectrum11", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum12 = m_knockSpectrum12, "knockSpectrum12", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum13 = m_knockSpectrum13, "knockSpectrum13", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum14 = m_knockSpectrum14, "knockSpectrum14", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum15 = m_knockSpectrum15, "knockSpectrum15", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
+	knockSpectrum16 = m_knockSpectrum16, "knockSpectrum16", "Volume", 0, 0, 0, 0, 0, 256, 0, 0
 
 gaugeCategory = DynoView
 	accelGauge = VssAcceleration, "Vehicle acceleration",	"m/s2",		-10,	10,		-6,	-4,		4,	6,	2,	2
