knock fuel correction, deceleration knock_plugin_clean - clean changes #6989

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3936,6 +3936,10 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = softwareKnockResponseCfg, "Response"
 		field = knockRetardAggression,		knockRetardAggression
 		field = knockRetardReapplyRate,	knockRetardReapplyRate
+		field = knockFuelTrimAggression,		knockFuelTrimAggression
+		field = knockFuelTrimReapplyRate,	knockFuelTrimReapplyRate
+		field = knockFuelTrim, 		knockFuelTrim
+		field = knockSuppressMinTps, knockSuppressMinTps
 
 	dialog = softwareKnockLeft, ""
 		panel = softwareKnockCfg
