--- a/.github/workflows/hardware-ci.yaml
+++ b/.github/workflows/hardware-ci.yaml
@@ -12,9 +12,11 @@ jobs:
       # Let all builds finish even if one fails early
       fail-fast: false
       matrix:
-        build-target: [f407-discovery,
+        build-target: [f407-discovery
+#          ,
           #proteus F7 HW CI is not 100% reliable #6002          proteus_f7,
-          proteus_f4]
+        #  proteus_f4
+        ]
 
         include:
           - build-target: f407-discovery
