--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -5010,8 +5010,8 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = harleyAcr, "Harley Automatic Compression Release"
 		field = vinNumber,										vinNumber
-		field = "Pin",	acrPin@if_ts_show_acr_pins
-		field = "Pin 2", acrPin2@if_ts_show_acr_pins
+		field = "Pin",	acrPin@@if_ts_show_acr_pins
+		field = "Pin 2", acrPin2@@if_ts_show_acr_pins
 		field = "Cut Fuel during ACR",   cutFuelInAcr
 		field = "#ACR is disabled after the specified number"
 		field = "#of revolutions, plus degrees of engine phase"
