--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2252,7 +2252,7 @@ menuDialog = main
 		subMenu = parkingLot,				"Experimental 1"@@if_ts_show_experimental
 		subMenu = parkingLot2,				"Experimental 2"@@if_ts_show_experimental
 		subMenu = parkingLot3,				"Experimental 3"@@if_ts_show_experimental
-		subMenu = harleyAcr,                "HD"@@if_ts_show_hd
+		subMenu = harleyAcr,                @@HD_MENU_NAME@@@@if_ts_show_hd
 		subMenu = antiLagDialog,                "Anti-Lag ALS"
 		subMenu = rotaryDialog,			"Rotary"@@if_ts_show_rotary
 		subMenu = throttleEffectiveArea, "Throttle effective area", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
