--- a/firmware/config/boards/hellen/alphax-4K-GDI/board_popular_vehicles.ini
+++ b/firmware/config/boards/hellen/alphax-4K-GDI/board_popular_vehicles.ini
@@ -1,1 +1,3 @@
 commandButton = "Hyundai PB",		        cmd_set_engine_type_HYUNDAI_PB
+
+commandButton = "GM LCV",		        cmd_set_engine_type_GM_LCV
