Void initLambda() always registers Lambda sensors fix #7007

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -297,6 +297,9 @@ enable2ndByteCanID = false
 	maintainConstantValue = throttlePedalWOTVoltage, { (calibrationMode == @@TsCalMode_PedalMax@@ ) ? calibrationValue  : throttlePedalWOTVoltage }
 	maintainConstantValue = throttlePedalSecondaryWOTVoltage, { (calibrationMode == @@TsCalMode_PedalMax@@ ) ? calibrationValue2 : throttlePedalSecondaryWOTVoltage }
 
+  requiresPowerCycle = afr_hwChannel
+  requiresPowerCycle = afr_hwChannel2
+
   requiresPowerCycle = gppwm1_pin
   requiresPowerCycle = gppwm2_pin
   requiresPowerCycle = gppwm3_pin
@@ -2151,7 +2154,7 @@ menuDialog = main
 		groupChildMenu = speedSensor,				"Vehicle speed sensor"@@if_ts_show_vehicle_speed_sensor
 		groupChildMenu = ambientTempSensor,			"Ambient temp sensor", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		groupChildMenu = acPressureSensor,			"A/C Pressure"@@if_ts_show_air_conditioning
-		
+
 		# Base analog input settings
 		subMenu = analogInputSettings,		"Analog input settings", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_analog_input_settings
 		subMenu = std_separator
