more reasoable placement for vinNumber field

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2499,6 +2499,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Engine Make",							engineMake
 		field = "Manufacturer Engine Code",				engineCode
 		field = "Vehicle Name",							vehicleName
+		field = "VIN",										vinNumber
 		field = "Compression Ratio",					compressionRatio@@if_ts_show_compression_ratio
 		field = "Forced Induction?",					isForcedInduction@@if_ts_show_forced_induction
 
@@ -5019,7 +5020,6 @@ dialog = tcuControls, "Transmission Settings"
 		indicator = { acrActive }, "ACR off", "ACR on", white, black, green, black
 
 	dialog = harleyAcr, "Harley Automatic Compression Release"
-		field = vinNumber,										vinNumber
 		field = "Pin",	acrPin@@if_ts_show_acr_pins
 		field = "Pin 2", acrPin2@@if_ts_show_acr_pins
 		field = "Cut Fuel during ACR",   cutFuelInAcr
