blink error indicators to get proper error codes #7021 only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1837,9 +1837,9 @@ gaugeCategory = GPPWM Outputs
 	indicator =						{ isWarnNow },		"No warnings",			"Warning",  white,  black, yellow,  black
 	indicator =					{ checkEngine },	"No Check Engine",		"Check Engine",  white,  black,	red,  black
 	indicator =					{ isTriggerError},			"Trigger OK",		"Trigger ERR",  white,  black,	red,  black
-	indicator = { fuelCutReason  != 0 }, "Injection OK", { Fuel cut: bitStringValue(fuelIgnCutCodeList, fuelCutReason)}, white, black, yellow, black
-	indicator = { sparkCutReason != 0 }, "Ignition OK",  { Ign cut: bitStringValue(fuelIgnCutCodeList, sparkCutReason)}, white, black, yellow, black
-	indicator = { etbErrorCode0 != 0 }, "ETB OK",  { ETB: bitStringValue(etbCutCodeList, etbErrorCode0)}, white, black, yellow, black
+	indicator = { fuelCutReasonBlinker  != 0 }, "Injection OK", { Fuel cut: bitStringValue(fuelIgnCutCodeList, fuelCutReason)}, white, black, yellow, black
+	indicator = { sparkCutReasonBlinker != 0 }, "Ignition OK",  { Ign cut: bitStringValue(fuelIgnCutCodeList, sparkCutReason)}, white, black, yellow, black
+	indicator = { etbErrorCodeBlinker0 != 0 }, "ETB OK",  { ETB: bitStringValue(etbCutCodeList, etbErrorCode0)}, white, black, yellow, black
 
 	; minor info
 	indicator =						{ isFanOn },				"Fan off",				"Fan on",  white,  black,  green,  black
