conditional etbJamDetectThreshold/etbJamTimeout only:uaefi

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4749,8 +4749,8 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Minimum ETB position",					etbMinimumPosition
 		field = "Maximum ETB position",					etbMaximumPosition
 		field = ""
-		field = "Jam detection error max",				etbJamDetectThreshold
-		field = "Jam detection timeout period",			etbJamTimeout
+		field = "Jam detection error max",				etbJamDetectThreshold, { etbJamDetectThreshold == 0 || etbJamTimeout != 0 }
+		field = "Jam detection timeout period",			etbJamTimeout, { etbJamDetectThreshold != 0 }
 		field = "Disables jam detection for testing until the next power cycle"
 		commandButton = "Temporarily disable jam detection", cmd_etb_disable_jam_detect
 		; we need the term about stepper idle in here, because there's a bug in TS that you can't have different visibility
