Build-Jdk into manifest only:proteus_f7

--- a/java_console/ui/build.gradle
+++ b/java_console/ui/build.gradle
@@ -33,6 +33,7 @@ shadowJar {
 
     manifest {
         attributes(
+                'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
                 'Main-Class': 'com.rusefi.Launcher'
         )
     }
