--- a/java_tools/ts_plugin/build.gradle
+++ b/java_tools/ts_plugin/build.gradle
@@ -20,6 +20,7 @@ jar {
     manifest {
         attributes(
                 'Built-Date': new Date().format('yyyy-MM-dd HH:mm:ss'),
+                'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
                 'Signature-Vendor': 'rusEFI LLC',
         )
     }
