--- a/java_console/autoupdate/build.gradle
+++ b/java_console/autoupdate/build.gradle
@@ -43,6 +43,7 @@ jar {
     manifest {
         attributes(
                 'Main-Class': 'com.rusefi.autoupdate.Autoupdate',
+                'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
                 'Built-Date': new Date().toString()
         )
     }
